vlib/v/checker/tests/prefix_err.vv
b := &true
_ := &10
_ := &"Hi"
_ := &"${b}"

a := 1
_ = *a
a <- 4

_ = ~true
_ = !4
